plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.181'
    id 'org.jetbrains.kotlin.jvm' version '2.1.20'
    id 'org.jetbrains.kotlin.plugin.lombok' version '2.1.20'
    id 'io.freefair.lombok' version "9.2.0"
}

version = mod_version
group = maven_group

// Enable the Jar-in-Jar system for your mod
jarJar.enable()

configurations {
    libraries
    api.extendsFrom libraries

    localImplementation
    runtimeClasspath.extendsFrom localImplementation
    compileOnly.extendsFrom localImplementation
}

repositories {
    mavenCentral()
    mavenLocal()
    maven { url = "https://maven.shedaniel.me/" } // Cloth Config, REI
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    } // Modrinth File
    maven {
        name = "CurseForge"
        url = "https://cursemaven.com"
    } // CurseForge
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
    }
    maven { url = "https://maven.parchmentmc.org" } // Parchment mappings
    maven { url = "https://maven.quiltmc.org/repository/release" } // Quilt Mappings
    maven { // Flywheel
        url = "https://maven.tterrag.com/"
        content {
            // need to be specific here due to version overlaps
            includeGroup("com.jozufozu.flywheel")
        }
    }
    // mavens for Forge-exclusives
    maven { url = "https://maven.theillusivec4.top/" } // Curios
    maven { url = "https://maven.terraformersmc.com/releases/" } // Mod Menu, EMI
    maven { // Create Forge and Registrate Forge
        url = "https://maven.tterrag.com/"
        content {
            includeGroup("com.tterrag.registrate")
            includeGroup("com.simibubi.create")
        }
    }
    maven { url = "https://jitpack.io/" } // Mixin Extras, Fabric ASM
    maven {
        // saps.dev Maven (KubeJS and Rhino)
        url "https://maven.latvian.dev/releases"
        content {
            includeGroup "dev.latvian.mods"
            includeGroup "dev.latvian.apps"
        }
    }
}

base {
    archivesName = "${project.name}-${minecraft_version}"
}

// Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

kotlin {
    jvmToolchain(21)
    compilerOptions {
        freeCompilerArgs.add("-Xcontext-parameters")
        freeCompilerArgs.add("-Xwhen-guards")
    }
}

minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

// Default run configurations.
// These can be tweaked, removed, or duplicated as needed.
runs {
    // applies to all the run configs below
    configureEach {
        // Recommended logging data for a userdev environment
        // The markers can be added/remove as needed separated by commas.
        // "SCAN": For mods scan.
        // "REGISTRIES": For firing of registry events.
        // "REGISTRYDUMP": For getting the contents of all registries.
        systemProperty 'forge.logging.markers', 'REGISTRIES'

        // Recommended logging level for the console
        // You can set various levels here.
        // Please read: https://stackoverflow.com/questions/2031163/when-to-use-the-different-log-levels
        systemProperty 'forge.logging.console.level', 'debug'

        modSource project.sourceSets.main

        dependencies {
            runtime project.configurations.libraries
        }
    }

    client {
        // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        programArgument '--nogui'
    }

    // This run config launches GameTestServer and runs all registered gametests, then exits.
    // By default, the server will crash when no gametests are provided.
    // The gametest system is also enabled by default for other run configs under the /test command.
    gameTestServer {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        // example of overriding the workingDirectory set in configureEach above, uncomment if you want to use it
        // workingDirectory project.file('run-data')

        // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
        programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

// In-client UI test harness: -PldTest wiring plus the verifyUiTest gate.
// Kept in its own file so downstream mods can apply the identical block.
apply from: rootProject.file('gradle/ldlib2-uitest.gradle')

// Parallel UI test harness: runParTest splits the same scenarios across N client processes.
apply from: rootProject.file('gradle/ldlib2-uitest-par.gradle')

// Multi-process test harness: runMpTest orchestrates a dedicated server + N clients.
apply from: rootProject.file('gradle/ldlib2-mptest.gradle')

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }
sourceSets.main.kotlin { srcDir("src/main/java") }

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"
    libraries("org.jetbrains.kotlin:kotlin-stdlib:${kotlin_stdlib_version}") {
        exclude group: "org.jetbrains", module: "annotations"
    }
    jarJar(group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: "[${kotlin_stdlib_version},)")

    // JEI
    compileOnly("mezz.jei:jei-${minecraft_version}-common-api:${jei_version}") { transitive = false }
    compileOnly("mezz.jei:jei-${minecraft_version}-neoforge-api:${jei_version}") { transitive = false }
    // only the api is on the compile classpath, the full mod is runtime only
    runtimeOnly("mezz.jei:jei-${minecraft_version}-neoforge:${jei_version}")

    // REI
    compileOnly("me.shedaniel:RoughlyEnoughItems-default-plugin-neoforge:${rei_version}")
    compileOnly("me.shedaniel:RoughlyEnoughItems-api-neoforge:${rei_version}")
    compileOnly("me.shedaniel:RoughlyEnoughItems-neoforge:${rei_version}")

    // EMI
//    compileOnly("dev.emi:emi-neoforge:${emi_version}:api")
//    compileOnly("dev.emi:emi-neoforge:${emi_version}")
    compileOnly("maven.modrinth:emi:1.1.24+1.21.1+neoforge")

    // AE2
    localImplementation("org.appliedenergistics:appliedenergistics2:${ae2_version}")
//    localImplementation("curse.maven:ae2-jei-integration-1074338:7727898")

    // KJS
    localImplementation("dev.latvian.mods:kubejs-neoforge:${kjs_version}") {
        exclude(group: "dev.architectury")
    }

    // Iris
    localImplementation("maven.modrinth:sodium:${sodium_version}")
    localImplementation("maven.modrinth:iris:${iris_version}")

    // lombok
//    compileOnly 'org.projectlombok:lombok:1.18.30'
//    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    // Yoga
    libraries("org.appliedenergistics.yoga:yoga:${yoga_version}")
    jarJar(group: 'org.appliedenergistics.yoga', name: 'yoga', version: "[${yoga_version},)")

    // Taffy
    libraries("dev.vfyjxf:taffy:${taffy_version}")
    jarJar(group: 'dev.vfyjxf', name: 'taffy', version: "[${taffy_version},)")

    // JUnit 5
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.0'

    // mock
    testImplementation 'org.mockito:mockito-core:5.5.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.5.0'

    // moddevmcp
//    localImplementation("dev.vfyjxf:moddevmcp:${moddevmcp_version}") { transitive = false }
}

tasks.withType(ProcessResources).configureEach {
    // set up properties for filling into metadata
    var replaceProperties = [
            "mod_id": mod_id,
            "version": version,
            "loader_version": loader_version,
            "forge_version": neo_version.split("\\.")[0], // only specify major version of forge
            "minecraft_version": minecraft_version,
            "jei_version_range": jei_version_range,
            "mod_license": mod_license,
            "mod_name": mod_name,
            "mod_description": mod_description,
            "mod_url": mod_url
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
        showStandardStreams = false
    }
}

// Configure the 'jarJar' task
// 'all' is the default classifier
tasks.named('jarJar') {
    // ...
}

tasks.register("printVersion") {
    println(mod_version)
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifactId = archivesBaseName
            from components.java
        }
    }
    repositories {
        maven {
            url "https://maven.firstdark.dev/snapshots"
            credentials {
                username System.getenv("MAVEN_USER")
                password System.getenv("MAVEN_PASS")
            }
        }
    }
}
